--- a/opacmenu_s1.html
+++ b/opacmenu_s1.html
@@ -12,13 +12,19 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta name="description" content="The on-line public access catalog for Mineral Area College library.">
 <meta name="keywords" content="Mineral Area College, library, libraries, librarians, card catalog, catalog, Galahad, online catalog, mobius">
-
+<script type="text/javascript">
 <LINK REL="STYLESHEET" TYPE="TEXT/CSS" HREF="http://galahad.missouri.edu/screens/galahad_styles.css">
-
-
-
-
-
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-6717423-12']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </HEAD>
 
 <BODY bgcolor="#ffffff" text="#000000" link="#cc0000" vlink="#cc0000" alink="#cc0000" 
