--- a/opacmenu_s3.html
+++ b/opacmenu_s3.html
@@ -14,11 +14,18 @@
 <meta name="keywords" content="Southeast Missouri State University, library, libraries, librarians, card catalog, catalog, Galahad, online catalog, mobius">
 
 <LINK REL="STYLESHEET" TYPE="TEXT/CSS" HREF="http://galahad.missouri.edu/screens/galahad_styles.css">
-
-
-
-
-
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-6717423-12']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </HEAD>
 
 <BODY bgcolor="#ffffff" text="#000000" link="#cc0000" vlink="#cc0000" alink="#cc0000" 
