Replaced hardcoding with toplogo in srchhelp and opacmenu pages

--- a/srchhelp_m_s1.html
+++ b/srchhelp_m_s1.html
@@ -21,56 +21,7 @@
 <BODY bgcolor="#ffffff" text="#000000" link="#cc0000" vlink="#cc0000" alink="#cc0000" 
 	onLoad="document.forms[0].SEARCH.focus(); document.forms[0].SEARCH.select();">
 
-
-
-
-
-
-
-
-
-	<table width="100%" border="0" cellspacing="0" cellpadding="0">
-    <tr>
-        <td rowspan="4" valign="top">
-				<A HREF="http://www.mineralarea.edu/library/"><IMG SRC="/screens/mac2c2logo.jpg" HEIGHT="94" WIDTH="232" ALT="" BORDER="0" ></a></td>
-
-        <td align="right" valign="top" nowrap><font  face="Arial, Helvetica, sans-serif" color="#999999">search: 
-            <a href="http://mobius.umsystem.edu/search/">MOBIUS</a> &gt; 
-			<a href="/search~">Galahad</a> &gt; 
-			<b><a href="/search~S1">Mineral Area College</a></b></font></td>
-    </tr>
-    <tr> 
-        <td align="right" valign="top" nowrap>&nbsp;</td>
-    </tr>
-    <tr> 
-        <td align="right" valign="top"> 
-            <table border="0" cellpadding="0" cellspacing="0" width="146">
-                <tr> <!-- Shim row, height 1. --> 
-                    <td><IMG SRC="/screens/shim.gif" HEIGHT="1" WIDTH="30" BORDER="0" ALT=""></td>
-                    <td><IMG SRC="/screens/shim.gif" HEIGHT="1" WIDTH="116" BORDER="0" ALT=""></td>
-                    <td><IMG SRC="/screens/shim.gif" HEIGHT="1" WIDTH="1" BORDER="0" ALT=""></td>
-                </tr>
-                <tr valign="top"><!-- row 1 --> 
-                    <td colspan="2" nowrap><a href="/"><IMG SRC="/screens/galahad_navbar_1.gif" HEIGHT="34" WIDTH="146" ALT=" Galahad " BORDER="0" ></a></td>
-                    <td><IMG SRC="/screens/shim.gif" HEIGHT="34" WIDTH="1" BORDER="0" ALT=""></td>
-                </tr>
-                <tr valign="top"><!-- row 2 --> 
-                    <td nowrap><IMG SRC="/screens/galahad_navbar_2.gif" HEIGHT="26" WIDTH="30" ALT="" BORDER="0" ></td>
-                    <td nowrap align="right" valign="middle"><font size="-1" face="Arial, Helvetica, sans-serif" color="#999999">
-					<a href="http://www.mineralarea.edu/library/">Library's Home</a> | 
-					<a href="/screens/faq.html">FAQ</a></font></td>
-                    <td><IMG SRC="/screens/shim.gif" HEIGHT="26" WIDTH="1" BORDER="0" ALT=""></td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-    <tr> 
-        <td align="right">&nbsp;</td>
-    </tr>
-</table>
-
-
-
+<!--{toplogo}-->
 <br>
 
 <!--{patron}-->
