Added the cardinal logo

--- a/toplogo_s1.html
+++ b/toplogo_s1.html
@@ -14,8 +14,11 @@
 	<table width="100%" border="0" cellspacing="0" cellpadding="0">
     <tr>
         <td rowspan="4" valign="top">
-				<A HREF="http://www.mineralarea.edu/library/"><IMG SRC="/screens/mac2c2logo.jpg" HEIGHT="94" WIDTH="232" ALT="" BORDER="0" ></a></td>
-
+				<A HREF="http://www.mineralarea.edu/library/"><IMG SRC="/screens/mac2c2logo_small.jpg" ALT="Mineral Area College" BORDER="0" ></a></td>      
+	<td rowspan="4" valign="top" align="center" width="550px">
+	      <h1 style="font-size:20px; margin-bottom:4px; color:#cc0000;">CARDinals Catalog</h1>
+	      <img src="/screens/cardinals.jpg" alt="MAC Cardinals" />
+	</td>
         <td align="right" valign="top" nowrap><font  face="Arial, Helvetica, sans-serif" color="#999999">search: 
             <a href="http://mobius.umsystem.edu/search/">MOBIUS</a> &gt; 
 			<a href="/search~">Galahad</a> &gt; 
