Made the cardinals images a little nicer, enlarged the logo

--- a/toplogo_s1.html
+++ b/toplogo_s1.html
@@ -18,12 +18,11 @@
 </div>
 
 <div id="left">
-  <A HREF="http://www.mineralarea.edu/library/"><IMG SRC="/screens/mac2c2logo_small.jpg" ALT="Mineral Area College" BORDER="0" ></a>
+  <A HREF="http://www.mineralarea.edu/library/"><IMG SRC="/screens/mac2c.gif" ALT="Mineral Area College" BORDER="0" ></a>
 </div>
 
 <div id="center">
-<h1>CARDinals Catalog</h1>
-<img src="/screens/cardinals.jpg" alt="MAC Cardinals" />
+<img src="/screens/cardinals.gif" alt="MAC Cardinals" />
 </div>
 
 <div id="right">
