2009b javascript submit fix. closes RT #1554

--- a/pverify3_web.html
+++ b/pverify3_web.html
@@ -422,7 +422,7 @@ function formCheck(form) {
 </script>
 <!--{xif}-->
 <br>
-<!--{submit}-->
+<input name="submit" type="SUBMIT" value="SUBMIT" />
 </td>
 <td valign="top" align="right">
 <table width="290" border="0" cellspacing="0" cellpadding="2" bgcolor="#EFEBDB">
@@ -462,4 +462,5 @@ function formCheck(form) {
 <!--{botlogo}-->
 
 </BODY>
-</HTML>
+</HTML>
+
