Set up the SMS feature

--- a/toplogo_s3.html
+++ b/toplogo_s3.html
@@ -11,6 +11,9 @@
   })();
 
 </script>
+
+<script type="text/javascript" src='/screens/sms.js'> </script>
+
 	<table width="100%" border="0" cellspacing="0" cellpadding="0">
     
 	 <tr>
