Fixed the bib_display so it displays all the fields it should, and the uniform title isn't at the top

--- a/bib_display.html
+++ b/bib_display.html
@@ -19,7 +19,7 @@
 <!--{pager}-->
 </div>
 <div id="recordinfo">
-<!--{recordinfo:uatp}-->
+<!--{recordinfo:!}-->
 <!--{ifhaspatrate}-->
 <div class="rateLableWrapper">
 <!--{ratings}-->
@@ -46,7 +46,7 @@
 <!--{ifTOC}-->
 <!--{TOC}-->
 <!--{xif}-->
-<!--{recordinfo:rnxqdbgoil}-->
+<!--{recordinfo:#}-->
 <!--{ifhasresourcetable}-->
 <!--{resourcetable}-->
 <!--{xif}-->
