--- a/bib_display_s3.html
+++ b/bib_display_s3.html
@@ -19,7 +19,7 @@
 <!--{pager}-->
 </div>
 <div id="recordinfo">
-<!--{recordinfo:uatp}-->
+<!--{recordinfo:!}-->
 <!--{ifhaspatrate}-->
 <div class="rateLableWrapper">
 <!--{ratings}-->
@@ -93,7 +93,7 @@
 <!--{ifTOC}-->
 <!--{TOC}-->
 <!--{xif}-->
-<!--{recordinfo:rnxqdbgoil}-->
+<!--{recordinfo:#}-->
 <!--{ifhasresourcetable}-->
 <!--{resourcetable}-->
 <!--{xif}-->
