--- a/srchhelp_t_s2.html
+++ b/srchhelp_t_s2.html
@@ -30,12 +30,12 @@
 <!-- Begin Search Help Text -->
 <center><table border="0" width="570"><tr><td>
 <h3 align="center"><b>Title Search</b></h3>
-<form METHOD="GET" ACTION="/search/t">
+<!--{formbegin}-->
   <p ALIGN="CENTER">
     <input TYPE="TEXT" name="SEARCH" maxlength="64" size="48">
     <input TYPE="SUBMIT" value="Search" name="SUBMIT">
   </p>
-</form>
+<!--{formend}-->
 <p>Search here for items by the exact title.</p>
 <table border="0"><tr><td nowrap valign="top">
 <i>for example:</i> </td><td>
