Replaced the opening form tag with the formbegin token on all srchhelp pages

--- a/srchhelp_X.html
+++ b/srchhelp_X.html
@@ -32,7 +32,7 @@
 
 <!-- begin advanced keyword search form -->
 
-<FORM NAME="frmAdvancedKeyword" METHOD=GET ACTION="/search/X">
+<!--{formbegin}-->
 <TABLE BORDER=0 CELLPADDING=3 CELLSPACING=0 BGCOLOR="#EFEBDB">
 
 <TR>
