--- a/srchhelp_w.html
+++ b/srchhelp_w.html
@@ -50,7 +50,7 @@ View Your Record</font></A><BR>
 
 Type the <B>WORD(S)</B> you want, then press <b>&lt;Enter&gt;</b>
 or click <b>Submit Search</b>
-<FORM METHOD=GET>
+<!--{formbegin}-->
 <INPUT TYPE=TEXT NAME=SEARCH MAXLENGTH="35" SIZE="35" ALIGN=CENTER>
 <br>
 <INPUT TYPE=SUBMIT VALUE="Submit Search">
