--- a/srchhelp_X_s1.html
+++ b/srchhelp_X_s1.html
@@ -32,7 +32,7 @@
 
 <!-- begin advanced keyword search form -->
 
-<FORM NAME="frmAdvancedKeyword" METHOD=GET ACTION="/search/X">
+<!--{formbegin}-->
 <TABLE BORDER=0 CELLPADDING=3 CELLSPACING=0 BGCOLOR="#EFEBDB">
 
 <TR>
