--- a/srchhelp_Y_s1.html
+++ b/srchhelp_Y_s1.html
@@ -67,7 +67,7 @@ function checkDates() {
 
 <!-- begin advanced keyword search form -->
 
-<FORM NAME="frmAdvancedKeyword" METHOD=GET ACTION="/search/Y">
+<!--{formbegin}-->
 <TABLE BORDER=0 CELLPADDING=3 CELLSPACING=0 BGCOLOR="#EFEBDB">
 
 <TR>
