--- a/srchhelp_a_s3.html
+++ b/srchhelp_a_s3.html
@@ -35,7 +35,7 @@
 <!-- Begin Search Help Text -->
 <center><table border="0" width="570"><tr><td>
 <h3 align="center"><b>Author Search</b></h3>
-<form METHOD="GET" ACTION="/search/a">
+<!--{formbegin}-->
   <p ALIGN="CENTER">
     <input TYPE="TEXT" NAME="SEARCH" MAXLENGTH="64" SIZE="48">
     <input TYPE="SUBMIT" VALUE="Search">
