--- a/srchhelp_d.html
+++ b/srchhelp_d.html
@@ -31,7 +31,7 @@
 <!-- Begin Search Help Text -->
 <center><table border="0" width="570"><tr><td>
 <h3 align="center"><b>LC Subject Search</b></h3>
-<form METHOD="GET" ACTION="/search/d">
+<!--{formbegin}-->
   <p ALIGN="CENTER"> 
     <input TYPE="TEXT" NAME="SEARCH" MAXLENGTH="64" SIZE="48">
     <input TYPE="SUBMIT" VALUE="Search">
