--- a/srchhelp_d_s1.html
+++ b/srchhelp_d_s1.html
@@ -29,8 +29,8 @@
 
 <!-- Begin Search Help Text -->
 <center><table border="0" width="570"><tr><td>
-<h3 align="center"><b>LC Subject Search</b></h3>
-<form METHOD="GET" ACTION="/search/d">
+<h3 align="center"><b>LC Subject Search</b></h3>
+<!--{formbegin}-->
   <p ALIGN="CENTER"> 
     <input TYPE="TEXT" NAME="SEARCH" MAXLENGTH="64" SIZE="48">
     <input TYPE="SUBMIT" VALUE="Search">
