--- a/srchhelp_e.html
+++ b/srchhelp_e.html
@@ -29,7 +29,7 @@
 <!-- Begin Search Help Text -->
 <center><table border="0" width="570"><tr><td>
 <h3 align="center"><b>Dewey Call Number Search</b></h3>
-<form METHOD="GET" ACTION="/search/e">
+<!--{formbegin}-->
   <p ALIGN="CENTER">
     <input TYPE="TEXT" NAME="SEARCH" MAXLENGTH="64" SIZE="48">
     <input TYPE="SUBMIT" VALUE="Search">
