--- a/srchhelp_f_s1.html
+++ b/srchhelp_f_s1.html
@@ -30,7 +30,7 @@
 <!-- Begin Search Help Text -->
 <center><table border="0" width="570"><tr><td>
 <h3 align="center"><b>Local Call Number Search</b></h3>
-<form METHOD="GET" ACTION="/search/f">
+<!--{formbegin}-->
   <p ALIGN="CENTER"> 
     <input TYPE="TEXT" NAME="SEARCH" MAXLENGTH="64" SIZE="48">
     <input TYPE="SUBMIT" VALUE="Search">
