--- a/srchhelp_g_s3.html
+++ b/srchhelp_g_s3.html
@@ -34,7 +34,7 @@
 <!-- Begin Search Help Text -->
 <center><table border="0" width="570"><tr><td>
 <h3 align="center"><b>Government Document Number Search</b></h3>
-<form METHOD="GET" ACTION="/search/g">
+<!--{formbegin}-->
   <p ALIGN="CENTER"> 
     <input TYPE="TEXT" NAME="SEARCH" MAXLENGTH="64" SIZE="48">
     <input TYPE="SUBMIT" VALUE="Search">
