--- a/srchhelp_o_s3.html
+++ b/srchhelp_o_s3.html
@@ -34,7 +34,7 @@
 <!-- Begin Search Help Text -->
 <center><table border="0" width="570"><tr><td>
 <h3 align="center"><b>OCLC Number Search</b></h3>
-<form METHOD="GET" ACTION="/search/o">
+<!--{formbegin}-->
   <p ALIGN="CENTER">
     <input TYPE="TEXT" name="SEARCH" maxlength="64" size="48">
     <input TYPE="SUBMIT" value="Search" name="SUBMIT">
