--- a/srchhelp_q_s2.html
+++ b/srchhelp_q_s2.html
@@ -29,7 +29,7 @@
 <!-- Begin Search Help Text -->
 <center><table border="0" width="570"><tr><td>
 <h3 align="center"><b>Author/Title Search</b></h3>
-<form name="frmAuthorTitle" METHOD="GET" ACTION="/search/q">
+<!--{formbegin}-->
   <table>
     <tr> 
       <td valign="top">Author </td>
