--- a/srchhelp_r_s1.html
+++ b/srchhelp_r_s1.html
@@ -30,7 +30,7 @@
 <!-- Begin Search Help Text -->
 <center><table border="0" width="570"><tr><td>
 <h3 align="center"><b>Reserve List Search, by Name of Course</b></h3>
-<form METHOD="GET" ACTION="/search/r">
+<!--{formbegin}-->
   <p ALIGN="CENTER">
     <input TYPE="TEXT" name="SEARCH" maxlength="64" size="48">
     <input TYPE="SUBMIT" value="Search" name="SUBMIT">
