--- a/srchhelp_s_s2.html
+++ b/srchhelp_s_s2.html
@@ -29,7 +29,7 @@
 <!-- Begin Search Help Text -->
 <center><table border="0" width="570"><tr><td>
 <h3 align="center"><b>Journal, Magazine & Newspaper Title Search</b></h3>
-<form METHOD="GET" ACTION="/search/s">
+<!--{formbegin}-->
   <p ALIGN="CENTER">
     <input TYPE="TEXT" name="SEARCH" maxlength="64" size="48">
     <input TYPE="SUBMIT" value="Search" name="SUBMIT">
