Arranged more links and changed help to srchhelp_k

--- a/toplogo.html
+++ b/toplogo.html
@@ -99,10 +99,10 @@ if (document.all&&document.getElementById) {
 
 <div class="navRight">
 <ul>
-<li><a href="http://mobius.umsystem.edu/">MOBIUS</a></li>
-<li><a href="/">Cluster</a></li>
-<li><a href="/patroninfo" tabindex="120">My Library Account</a></li>
-<li><a href="/search/k" tabindex="115">Help</a></li>
+<li><a href="/patroninfo">My Library Account</a></li>
+<li><a href="/search/j">Course Reserves</a></li>
+<li><a href="http://searchmobius.org">MOBIUS</a></li>
+<li><a href="/search/k">Help</a></li>
 </ul>	
 
 </div>
