--- a/botlogo.html
+++ b/botlogo.html
@@ -3,6 +3,10 @@
 <!-- Updated: Sept 2009 -->
 </div><!-- pageContent  -->
 <div style="clear:both"></div>
+<div id="botlogo">
+<p><strong>Galahad</strong> includes the collections of the following Southeast Missouri libraries:</p>
+<p><a href="/search~S1">Mineral Area College</a> | <a href="/search~S2">Three Rivers Community College</a> | <a href="/search~S3">Southeast Missouri State University</a> </p>
+</div>
 </div><!-- fullPage -->
 </div><!-- min-height -->
 <script type="text/javascript"> 
