--- a/toplogo.html
+++ b/toplogo.html
@@ -9,6 +9,12 @@
 if (document.body){document.body.className = "bodybg";}
 </script>
 
+<script type="text/javascript">
+$(document).ready(function () {
+	$("span:contains(WebPAC PRO)").hide(); //Hide the iii footer
+});
+</script>
+
 <div class="minHeight">
 <div class="fullPage">
 
