Added the Browse Nearby wwwoption

--- a/toplogo_s1.html
+++ b/toplogo_s1.html
@@ -28,6 +28,10 @@ $(document).ready(function () {
 <a href="/search/" tabindex="10"><img src="/screens/galahad.png" alt="Galahad"></a>
 </div>
 
+<div class="macLogo">
+<a href="/search/search~S1" tabindex="10"><img src="/screens/cardinals.gif" alt="CARDinals Catalog"></a>
+</div>
+
 <div class="mobiusLogo">
 <a href="http://mobius.umsystem.edu"><img src="/screens/mobius.gif" alt="MOBIUS Catalog"></a>
 </div>
@@ -41,6 +45,7 @@ $(document).ready(function () {
 <li><a href="/patroninfo">My Library Account</a></li>
 <li><a href="/search/j">Course Reserves</a></li>
 <li><a href="http://searchmobius.org">MOBIUS</a></li>
+<li><a href="/ftlist">New Material</a></li>
 <li><a href="/search/k">Help</a></li>
 </ul>	
 
