Fixed a broken link in MAC's toplogo

--- a/toplogo_s1.html
+++ b/toplogo_s1.html
@@ -29,7 +29,7 @@ $(document).ready(function () {
 </div>
 
 <div class="macLogo">
-<a href="/search/search~S1" tabindex="10"><img src="/screens/cardinals.gif" alt="CARDinals Catalog"></a>
+<a href="/search~S1" tabindex="10"><img src="/screens/cardinals.gif" alt="CARDinals Catalog"></a>
 </div>
 
 <div class="mobiusLogo">
