--- a/toplogo_s1.html
+++ b/toplogo_s1.html
@@ -7,6 +7,7 @@
 
 <script type="text/javascript" src="/screens/jquery-1.7.min.js"></script>
 <script src="/screens/menu-collapsed.js" type="text/javascript"></script>
+<script type="text/javascript" src='/screens/sms.js'> </script>
 
 <script type="text/javascript">
 if (document.body){document.body.className = "bodybg";}
