Changed missouri.edu and mobius.umsystem.edu to searchmobius.org everywhere, and changed absolute links to relative links

--- a/faq.html
+++ b/faq.html
@@ -10,7 +10,7 @@
 
 
 
-<LINK REL="STYLESHEET" TYPE="TEXT/CSS" HREF="http://galahad.missouri.edu/screens/galahad_styles.css">
+<LINK REL="STYLESHEET" TYPE="TEXT/CSS" HREF="/screens/galahad_styles.css">
 
 
 
@@ -52,7 +52,7 @@
 		</td>
 
 		<td valign="top" align="right" nowrap><font  face="Arial, Helvetica, sans-serif" color="#999999">search: 
-		            <a href="http://mobius.umsystem.edu/search/">MOBIUS</a> &gt; 
+		            <a href="http://searchmobius.org/search/">MOBIUS</a> &gt; 
 					<b><a href="/search~">Galahad Library Catalog</a></b></font></td>
     </tr>
 </table>
@@ -116,7 +116,7 @@
   and universities and creates a single user interface that allows faculty and 
   students to request library materials using any personal computer in any location 
   with access to the Internet. requested materials are delivered within one or 
-  two days of being requested by the MOBIUS Delivery System. <a href="http://mobius.umsystem.edu/screens/about_mobius.html"
+  two days of being requested by the MOBIUS Delivery System. <a href="http://searchmobius.org/screens/about_mobius.html"
 target="_blank">[more]</a> </p>
 <p align="right"><font size="-1"><a href="#top">[back to top]</a></font></p>
 
@@ -287,7 +287,7 @@ catalog or a catalog of another MOBIUS member or cluster.
 If you are searching the comprehensive MOBIUS catalog, you will see 
 listings for libraries in all of the clusters statewide.  A list of MOBIUS libraries is
 available 
-<a href="http://mobius.umsystem.edu/screens/libinfo.html">online</a>.
+<a href="http://searchmobius.org/screens/libinfo.html">online</a>.
 
 <p align="right"><font size="-1"><a href="#top">[back to top]</a></font></p>
 
