--- a/toplogo.html
+++ b/toplogo.html
@@ -33,7 +33,7 @@
 		</td>
 
 		<td valign="top" align="right" nowrap><font  face="Arial, Helvetica, sans-serif" color="#999999">search: 
-		            <a href="http://mobius.umsystem.edu/search/">MOBIUS</a> &gt; 
+		            <a href="http://searchmobius.org/search/">MOBIUS</a> &gt; 
 					<b><a href="/search~">Galahad Library Catalog</a></b></font></td>
     </tr>
 </table>
