--- a/toplogo_s1.html
+++ b/toplogo_s1.html
@@ -13,7 +13,7 @@
 </script>
 
 <div id="breadcrumb">
-<p>search: <a href="http://mobius.umsystem.edu/search/">MOBIUS</a> &gt; <a href="/search~">Galahad</a> &gt; <strong><a href="/search~S1">Mineral Area College</a></strong>
+<p>search: <a href="http://searchmobius.org/search/">MOBIUS</a> &gt; <a href="/search~">Galahad</a> &gt; <strong><a href="/search~S1">Mineral Area College</a></strong>
 </p>
 </div>
 
