--- a/toplogo_s3.html
+++ b/toplogo_s3.html
@@ -42,7 +42,7 @@
         </tr>
         <tr>      
 	     	<td valign="top" align="left" nowrap><font  face="Arial, Helvetica, sans-serif" color="#999999">search: 
-            <a href="http://mobius.umsystem.edu/search/">MOBIUS</a> &gt; 
+            <a href="http://searchmobius.org/search/">MOBIUS</a> &gt; 
 			<a href="/search~">Galahad</a> &gt; 
 			<b><a href="/search~S3">Southeast Missouri State University</a></b></font><br><br></td>
     </tr>
