--- a/403loginerror.html
+++ b/403loginerror.html
@@ -13,7 +13,7 @@
 
 
 
-<LINK REL="STYLESHEET" TYPE="TEXT/CSS" HREF="http://galahad.missouri.edu/screens/galahad_styles.css">
+<LINK REL="STYLESHEET" TYPE="TEXT/CSS" HREF="/screens/galahad_styles.css">
 
 
 
@@ -55,7 +55,7 @@
 		</td>
 
 		<td valign="top" align="right" nowrap><font  face="Arial, Helvetica, sans-serif" color="#999999">search: 
-		            <a href="http://mobius.umsystem.edu/search/">MOBIUS</a> &gt; 
+		            <a href="http://searchmobius.org/search/">MOBIUS</a> &gt; 
 					<b><a href="/search~">Galahad Library Catalog</a></b></font></td>
     </tr>
 </table>
