--- a/mainmenu.html
+++ b/mainmenu.html
@@ -3,7 +3,7 @@
 <head>
     <title>Galahad Library Catalog - Welcome</title>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<LINK REL="STYLESHEET" TYPE="TEXT/CSS" HREF="http://galahad.missouri.edu/screens/galahad_styles.css">
+	<LINK REL="STYLESHEET" TYPE="TEXT/CSS" HREF="/screens/galahad_styles.css">
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
@@ -25,7 +25,7 @@
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
     <tr>
         <td align="right" valign="top" nowrap><font  face="Arial, Helvetica, sans-serif" color="#999999">search: 
-            <a href="http://mobius.umsystem.edu/search/">MOBIUS</a> &gt; 
+            <a href="http://searchmobius.org/search/">MOBIUS</a> &gt; 
 			<a href="/search~">Galahad</a></font></td>
     </tr>
 </table>
@@ -60,7 +60,7 @@
 	<hr noshade>
 	<p>
 	<font face="Arial, Helvetica, sans-serif">
-	<a href="http://mobius.umsystem.edu/screens/about_mobius.html" target="_blank">About MOBIUS</a>
+	<a href="http://searchmobius.org/screens/about_mobius.html" target="_blank">About MOBIUS</a>
 	</font>
 	</p>
 	
