--- a/opacmenu.html
+++ b/opacmenu.html
@@ -13,7 +13,7 @@
 <meta name="description" content="The Galahad Library Catalog includes the collections of the following Missouri libraries: Mineral Area College, Three Rivers Community College, Southeast Missouri State University.">
 <meta name="keywords" content="library, libraries, librarians, card catalog, catalog, Galahad, online catalog, mobius">
 
-<LINK REL="STYLESHEET" TYPE="TEXT/CSS" HREF="http://galahad.missouri.edu/screens/galahad_styles.css">
+<LINK REL="STYLESHEET" TYPE="TEXT/CSS" HREF="/screens/galahad_styles.css">
 
 </HEAD>
 
