--- a/opacmenu_s1.html
+++ b/opacmenu_s1.html
@@ -12,7 +12,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta name="description" content="The on-line public access catalog for Mineral Area College library.">
 <meta name="keywords" content="Mineral Area College, library, libraries, librarians, card catalog, catalog, Galahad, online catalog, mobius">
-<LINK REL="STYLESHEET" TYPE="TEXT/CSS" HREF="http://galahad.missouri.edu/screens/galahad_styles.css">
+<LINK REL="STYLESHEET" TYPE="TEXT/CSS" HREF="/screens/galahad_styles.css">
 </HEAD>
 
 <BODY bgcolor="#ffffff" text="#000000" link="#cc0000" vlink="#cc0000" alink="#cc0000" 
