--- a/opacmenu_s2.html
+++ b/opacmenu_s2.html
@@ -13,7 +13,7 @@
 <meta name="description" content="The on-line public access catalog for Three Rivers Community College library.">
 <meta name="keywords" content="Three Rivers Community College, library, libraries, librarians, card catalog, catalog, Galahad, online catalog, mobius">
 
-<LINK REL="STYLESHEET" TYPE="TEXT/CSS" HREF="http://galahad.missouri.edu/screens/galahad_styles.css">
+<LINK REL="STYLESHEET" TYPE="TEXT/CSS" HREF="/screens/galahad_styles.css">
 </HEAD>
 
 <BODY bgcolor="#ffffff" text="#000000" link="#cc0000" vlink="#cc0000" alink="#cc0000" 
