--- a/srchhelp_p.html
+++ b/srchhelp_p.html
@@ -10,7 +10,7 @@
 
 
 
-<LINK REL="STYLESHEET" TYPE="TEXT/CSS" HREF="http://galahad.missouri.edu/screens/galahad_styles.css">
+<LINK REL="STYLESHEET" TYPE="TEXT/CSS" HREF="/screens/galahad_styles.css">
 
 
 
