Added the mobilecat redirect script

--- a/toplogo.html
+++ b/toplogo.html
@@ -9,7 +9,13 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
-</script>
+</script>
+
+<script type="text/javascript" src="/screens/jquery-1.7.1.min.js"></script>
+
+<script type="text/javascript" src="/screens/jquery.cookie.js"></script>
+
+<script type="text/javascript" src="/screens/mobileredirect.js"></script>
 	<table width="100%" border="0" cellspacing="0" cellpadding="0">
     <tr>
 		<td valign="top" nowrap>
