--- a/toplogo_s1.html
+++ b/toplogo_s1.html
@@ -12,6 +12,12 @@
 
 </script>
 
+<script type="text/javascript" src="/screens/jquery-1.7.1.min.js"></script>
+
+<script type="text/javascript" src="/screens/jquery.cookie.js"></script>
+
+<script type="text/javascript" src="/screens/mobileredirect.js"></script>
+
 <div id="breadcrumb">
 <p>search: <a href="http://mobius.umsystem.edu/search/">MOBIUS</a> &gt; <a href="/search~">Galahad</a> &gt; <strong><a href="/search~S1">Mineral Area College</a></strong>
 </p>
