--- a/toplogo_s3.html
+++ b/toplogo_s3.html
@@ -12,6 +12,12 @@
 
 </script>
 
+<script type="text/javascript" src="/screens/jquery-1.7.1.min.js"></script>
+
+<script type="text/javascript" src="/screens/jquery.cookie.js"></script>
+
+<script type="text/javascript" src="/screens/mobileredirect.js"></script>
+
 <script type="text/javascript" src='/screens/sms.js'> </script>
 
 	<table width="100%" border="0" cellspacing="0" cellpadding="0">
