--- a/mainmenu.html
+++ b/mainmenu.html
@@ -18,6 +18,13 @@
 
 </script>
 
+<script type="text/javascript" src="/screens/jquery-1.7.1.min.js"></script>
+
+<script type="text/javascript" src="/screens/jquery.cookie.js"></script>
+
+<script type="text/javascript" src="/screens/mobileredirect.js"></script>
+
+
 </head>
 
 <BODY bgcolor="#ffffff" text="#000000" link="#cc0000" vlink="#cc0000" alink="#cc0000">
