--- a/toplogo.html
+++ b/toplogo.html
@@ -4,6 +4,8 @@
 
 <script type="text/javascript" src="/screens/jquery-1.7.min.js"></script>
 <script src="/screens/menu-collapsed.js" type="text/javascript"></script>
+<script type="text/javascript" src="/screens/jquery.cookie.js"></script>
+<script type="text/javascript" src="/screens/mobileredirect.js"></script>
 <script type="text/javascript" src='/screens/sms.js'> </script>
 
 <script type="text/javascript">
