Adjusted the search examples

--- a/srchhelp_a.html
+++ b/srchhelp_a.html
@@ -58,9 +58,10 @@ startTimeout(600000, "/");
 <div class="formRight">
 <p>Type the author's or artist's last name first. For example:</p>
 <ul>
-<li>shakespeare</li>
-<li>shakespeare, william</li>
-<li>angelou, m</li>
+<li>Kingston</li>
+<li>Morrison, Toni</li>
+<li>garcia marquez, g</li>
+<li>twain mark</li>
 </ul>
 <p>You may also type the name of an organization or governmental body. For example:</p>
 <ul>
