--- a/srchhelp_i.html
+++ b/srchhelp_i.html
@@ -56,13 +56,42 @@ startTimeout(600000, "/");
 </div><!--formLeft -->
 
 <div class="formRight">
-<p>Type as much of the ISBN/ISSN, LC Card Number, Music Number, etc. as you want For example:</p>
-<ul>
-<li>0525452710</li>
-<li>0084-2729</li>
-<li>65013742</li>
-<li>X 906 Everest</li>
+<p>Search here for standard numbers such as ISBN, ISSN, technical report and music numbers. For example:</p>
+<ul id="standardNumbers">
+<li>International Standard Serial Number (ISSN)</li>
+    <ul>
+        <li>0040-781x</li>
+        <li>0033 3107</li>
+    </ul>
+<li>International Standard Book Number (ISBN)</li>
+    <ul>
+        <li>0201112116</li>
+        <li>0123467652</li>
+    </ul>
+<li>Record Label Numbers</li>
+    <ul>
+        <li>SP-33-143</li>
+        <li>RCA LM 1080</li>
+    </ul>
+<li>CODEN</li>
+    <ul>
+        <li>SCIEAS</li>
+        <li>LANAA1</li>
+    </ul>
+<li>STRN</li>
+    <ul>
+        <li>FHWA/CA/NT/CSU-91-01</li>
+        <li>YA-512-CT-200</li>
+    </ul>
+<li>LCCN</li>
+    <ul>
+        <li>79-51608</li>
+        <li>agr-04394</li>
+        <li>agr04003603</li>
+    </ul>
 </ul>
+<p>Type in the ISSN, CODEN, STRN, or LCCN exactly as cited.</p>
+<p>Type ISBN without hyphens.</p>
 </div><!--formRight -->
 
 </div><!--form2Part -->
