--- a/srchhelp_s.html
+++ b/srchhelp_s.html
@@ -58,10 +58,11 @@ startTimeout(600000, "/");
 <div class="formRight">
 <p>Type as much or as little of the periodical title as you want. For example:</p>
 <ul>
-<li>national geographic</li>
-<li>national geo</li>
-<li>people</li>
+<li>journal of counseling psychology</li>
+<li>journal of counseling psy</li>
+<li>journal of the philosophy of sport</li>
 </ul>
+<p>Note: this search does not find individual articles. To find individual articles, use a periodical index.</p>
 </div><!--formRight -->
 
 </div><!--form2Part -->
