--- a/srchhelp_c.html
+++ b/srchhelp_c.html
@@ -20,7 +20,7 @@ startTimeout(600000, "/");
 <!--{toplogo}-->
 <div class="pageContentInner">
 
-<h1 class="pageHeader">LC Call Number Search</h1>
+<h1 class="pageHeader">Library of Congress / National Library of Medicine Call Number  Search</h1>
 
 <div id="accessibleForm" class="form2Part">
 <div class="formLeft">
@@ -56,10 +56,12 @@ startTimeout(600000, "/");
 </div><!--formLeft -->
 
 <div class="formRight">
-<p>Type as much or as little of the Library of Congress call number as you want. For example:</p>
+<p>Type as much or as little of the call number as you want. For example:</p>
 <ul>
-<li>QA 402.6 R65 1986</li>
-<li>QA 402</li>
+<li>PS 1999H25Z98</li>
+<li>qc793.3J3 1998</li>
+<li>RA 1151</li>
+<li>LB</li>
 </ul>
 </div><!--formRight -->
 
