--- a/toplogo.html
+++ b/toplogo.html
@@ -65,9 +65,9 @@ $(document).ready(function () {
 			<ul>
 				<li><a href="/search/c">Library of Congress (LC) Call Number</a></li>
 				<li><a href="/search/e">Dewey Call Number</a></li>
-                                <li><a href="/search/f">Other Call Number</a></li>
+                                <li><a href="/search/f">Local Call Number</a></li>
                                 <li><a href="/search/g">Government Document Call Number</a></li>
-                                <li><a href="/search/i">ISBN, ISSN, Music, Etc., Number</a></li>
+                                <li><a href="/search/i">Standard Number</a></li>
                                 <li><a href="/search/o">OCLC Number</a></li>
 			</ul>
 </li>
