--- a/toplogo_s1.html
+++ b/toplogo_s1.html
@@ -28,15 +28,11 @@ $(document).ready(function () {
 <div class="topLogo">
 
 <div class="topLogoImage">
-<a href="/search/" tabindex="10"><img src="/screens/galahad.png" alt="Galahad"></a>
+<a href="/search/" tabindex="10"><img src="/screens/mac.png" alt="Mineral Area College"></a>
 </div>
 
-<div class="macLogo">
-<a href="/search~S1" tabindex="10"><img src="/screens/cardinals.gif" alt="CARDinals Catalog"></a>
-</div>
-
-<div class="mobiusLogo">
-<a href="http://mobius.umsystem.edu"><img src="/screens/mobius.gif" alt="MOBIUS Catalog"></a>
+<div class="clusterLogo">
+<a href="/" tabindex="10"><img src="/screens/galahad.png" alt="Galahad"></a>
 </div>
 
 </div><!--topLogo-->
