--- a/toplogo_s2.html
+++ b/toplogo_s2.html
@@ -27,7 +27,7 @@ $(document).ready(function () {
 <div class="topLogo">
 
 <div class="topLogoImage">
-<a href="/search" tabindex="10"><img src="/screens/trcc.gif" alt="Three Rivers Community College"></a>
+<a href="/search" tabindex="10"><img src="/screens/threerivers.png" alt="Three Rivers Community College"></a>
 </div>
 
 <div class="clusterLogo">
