Put the CARDinals Catalog logo back

--- a/toplogo_s1.html
+++ b/toplogo_s1.html
@@ -31,6 +31,10 @@ $(document).ready(function () {
 <a href="/search/" tabindex="10"><img src="/screens/mac.png" alt="Mineral Area College"></a>
 </div>
 
+<div class="macLogo">
+<a href="/search~S1" tabindex="10"><img src="/screens/cardinals.gif" alt="CARDinals Catalog"></a>
+</div>
+
 <div class="clusterLogo">
 <a href="/" tabindex="10"><img src="/screens/galahad.png" alt="Galahad"></a>
 </div>
