--- a/toplogo_loggedin_s2.html
+++ b/toplogo_loggedin_s2.html
@@ -17,6 +17,8 @@ if (document.body){document.body.className = "bodybg";}
 <script type="text/javascript">
 $(document).ready(function () {
 	$("span:contains(WebPAC PRO)").hide(); //Hide the iii footer
+	$('#b option:not([value^="s"])').hide(); //Hides the out-of-scope locations
+	$('#b option[value=""]').show(); //Shows the any location for the scopes
 });
 </script>
 
