Added the library home pages to the top logos

--- a/toplogo_loggedin_s1.html
+++ b/toplogo_loggedin_s1.html
@@ -60,6 +60,7 @@ $(document).ready(function () {
 <li><a href="http://searchmobius.org">MOBIUS</a></li>
 <li><a href="/ftlist">New Material</a></li>
 <li><a href="/search/k">Help</a></li>
+<li><a href="http://www.mineralarea.edu/library/default.aspx">Library Home</a></li>
 </ul>	
 
 </div>
