--- a/toplogo_loggedin_s2.html
+++ b/toplogo_loggedin_s2.html
@@ -54,6 +54,7 @@ $(document).ready(function () {
 <li><a href="/search/j">Course Reserves</a></li>
 <li><a href="http://searchmobius.org">MOBIUS</a></li>
 <li><a href="/search/k">Help</a></li>
+<li><a href="http://www.trcc.commnet.edu/div_it/library/library.shtml">Library Home</a></li>
 </ul>	
 
 </div>
