--- a/toplogo_s1.html
+++ b/toplogo_s1.html
@@ -52,6 +52,7 @@ $(document).ready(function () {
 <li><a href="http://searchmobius.org">MOBIUS</a></li>
 <li><a href="/ftlist">New Material</a></li>
 <li><a href="/search/k">Help</a></li>
+<li><a href="http://www.mineralarea.edu/library/default.aspx">Library Home</a></li>
 </ul>	
 
 </div>
