--- a/toplogo.html
+++ b/toplogo.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="/screens/jquery.cookie.js"></script>
 <script type="text/javascript" src="/screens/mobileredirect.js"></script>
 <script type="text/javascript" src='/screens/sms.js'> </script>
-
+<link rel="shortcut icon" type="ximage/icon" href="/screens/favicon.ico" />
 <script type="text/javascript">
 $(document).ready(function () {
 	$("span:contains(WebPAC PRO)").hide(); //Hide the iii footer
