--- a/toplogo_s2.html
+++ b/toplogo_s2.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="/screens/jquery.cookie.js"></script>
 <script type="text/javascript" src="/screens/mobileredirect.js"></script>
 <script type="text/javascript" src='/screens/sms.js'> </script>
-
+<link rel="shortcut icon" type="ximage/icon" href="/screens/favicon.ico" />
 <script type="text/javascript">
 if (document.body){document.body.className = "bodybg";}
 </script>
