Set up the domain redirect script

--- a/toplogo.html
+++ b/toplogo.html
@@ -15,6 +15,8 @@
 
 <script type="text/javascript" src="/screens/jquery.cookie.js"></script>
 
+<script type="text/javascript" src="/screens/domainredirect.js"></script>
+
 <script type="text/javascript" src="/screens/mobileredirect.js"></script>
 	<table width="100%" border="0" cellspacing="0" cellpadding="0">
     <tr>
@@ -42,6 +44,8 @@
 		            <a href="http://searchmobius.org/search/">MOBIUS</a> &gt; 
 					<b><a href="/search~">Galahad Library Catalog</a></b></font></td>
     </tr>
-</table>
+</table>
+	
+<div id="redirectMessage"></div>
 
 
