--- a/toplogo_s3.html
+++ b/toplogo_s3.html
@@ -16,6 +16,8 @@
 
 <script type="text/javascript" src="/screens/jquery.cookie.js"></script>
 
+<script type="text/javascript" src="/screens/domainredirect.js"></script>
+
 <script type="text/javascript" src="/screens/mobileredirect.js"></script>
 
 <script type="text/javascript" src='/screens/sms.js'> </script>
@@ -52,7 +54,9 @@
 			<a href="/search~">Galahad</a> &gt; 
 			<b><a href="/search~S3">Southeast Missouri State University</a></b></font><br><br></td>
     </tr>
-</table>
+</table>
+	    
+<div id="redirectMessage"></div>
 
 
 
