--- a/toplogo_s1.html
+++ b/toplogo_s1.html
@@ -16,6 +16,8 @@
 
 <script type="text/javascript" src="/screens/jquery.cookie.js"></script>
 
+<script type="text/javascript" src="/screens/domainredirect.js"></script>
+
 <script type="text/javascript" src="/screens/mobileredirect.js"></script>
 
 <div id="breadcrumb">
@@ -71,3 +73,5 @@
 </div>
 
 <div class="clear"></div>
+
+<div id="redirectMessage"></div>
