--- a/toplogo_s2.html
+++ b/toplogo_s2.html
@@ -16,6 +16,8 @@
 
 <script type="text/javascript" src="/screens/jquery.cookie.js"></script>
 
+<script type="text/javascript" src="/screens/domainredirect.js"></script>
+
 <script type="text/javascript" src="/screens/mobileredirect.js"></script>
 
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -60,6 +62,8 @@
     <tr> 
         <td align="right">&nbsp;</td>
     </tr>
-</table>
+</table>
+
+<div id="redirectMessage"></div>
 
 
