Added a link to SEMO's hours

--- a/toplogo_s3.html
+++ b/toplogo_s3.html
@@ -30,7 +30,7 @@ $(document).ready(function () {
 <div class="navRight">
 <ul>
 <li><a href="/patroninfo">My Library Account</a></li>
-<li><a>Hours</a></li>
+<li><a href="http://library.semo.edu/info/library/hours.shtml">Hours</a></li>
 <li>
 <!-- Place this div in your web page where you want your chat widget to appear. -->
 <div class="needs-js">
