Cleaned up the toplogo

--- a/botlogo.html
+++ b/botlogo.html
@@ -61,5 +61,6 @@ else {
 if (chgTitle == 1) { document.title = lib_or_cat_name + title_suff + "'" + rrForm.value + "'"; }
 }
 //-->
-</script> 
+</script>
+<link rel="shortcut icon" type="ximage/icon" href="/screens/favicon.ico" />
 <!-- end botlogo.html file -->
