--- a/toplogo_loggedin.html
+++ b/toplogo_loggedin.html
@@ -3,34 +3,29 @@
 <!-- Updated: 06 Oct 2010 -->
 
 <script type="text/javascript" src="/screens/jquery-1.7.min.js"></script>
-<script src="/screens/menu-collapsed.js" type="text/javascript"></script>
 <script type="text/javascript" src="/screens/jquery.cookie.js"></script>
+<script type="text/javascript" src="/screens/domainredirect.js"></script>
 <script type="text/javascript" src="/screens/mobileredirect.js"></script>
+<script src="/screens/menu-collapsed.js" type="text/javascript"></script>
 <script type="text/javascript" src='/screens/sms.js'> </script>
-<link rel="shortcut icon" type="ximage/icon" href="/screens/favicon.ico" />
 <script type="text/javascript">
 $(document).ready(function () {
 	$("span:contains(WebPAC PRO)").hide(); //Hide the iii footer
 
 	//$('#searchtype').change(function(){
     	//$("#exampleText").load("screens/" + this.value + ".inc");
-	//}); //Changes the search examples
-	
-	//$('#b option:not([value^=""])').hide(); //Hides the out-of-scope locations
+	//});
+	//Changes the search examples
+	//$('#b option:not([value^="z"])').hide(); //Hides the out-of-scope locations
 	//$('#b option[value=""]').show(); //Shows the any location for the scopes
 });
 </script>
-<script type="text/javascript" src="/screens/jquery.cookie.js"></script>
-<script type="text/javascript" src="/screens/mobileredirect.js"></script>
+
 <script type="text/javascript">
 if (document.body){document.body.className = "bodybg";}
 </script>
 
-<script type="text/javascript">
-$(document).ready(function () {
-	$("span:contains(WebPAC PRO)").hide(); //Hide the iii footer
-});
-</script>
+<link rel="stylesheet" type="text/css" href="/screens/styles_s0.css" />
 
 <div class="minHeight">
 <div class="fullPage">
@@ -46,7 +41,10 @@ $(document).ready(function () {
 <a href="http://searchmobius.org"><img src="/screens/mobius.gif" alt="MOBIUS Catalog"></a>
 </div>
 
+<div id="alertMessage"></div>
+
 </div><!--topLogo-->
+
 
 <div class="linkBanner">
 
