--- a/toplogo_loggedin_s3.html
+++ b/toplogo_loggedin_s3.html
@@ -2,25 +2,30 @@
 <!-- Rel 2009B Example Set -->
 <!-- Updated: 06 Oct 2010 -->
 
-<link rel="stylesheet" type="text/css" href="/screens/styles_s3.css" />
-
 <script type="text/javascript" src="/screens/jquery-1.7.min.js"></script>
-<script src="/screens/menu-collapsed.js" type="text/javascript"></script>
 <script type="text/javascript" src="/screens/jquery.cookie.js"></script>
+<script type="text/javascript" src="/screens/domainredirect.js"></script>
 <script type="text/javascript" src="/screens/mobileredirect.js"></script>
+<script src="/screens/menu-collapsed.js" type="text/javascript"></script>
 <script type="text/javascript" src='/screens/sms.js'> </script>
-<link rel="shortcut icon" type="ximage/icon" href="/screens/favicon.ico" />
-<script type="text/javascript">
-if (document.body){document.body.className = "bodybg";}
-</script>
-
 <script type="text/javascript">
 $(document).ready(function () {
 	$("span:contains(WebPAC PRO)").hide(); //Hide the iii footer
+
+	//$('#searchtype').change(function(){
+    	//$("#exampleText").load("screens/" + this.value + ".inc");
+	//});
+	//Changes the search examples
 	$('#b option:not([value^="t"])').hide(); //Hides the out-of-scope locations
 	$('#b option[value=""]').show(); //Shows the any location for the scopes
 });
 </script>
+
+<script type="text/javascript">
+if (document.body){document.body.className = "bodybg";}
+</script>
+
+<link rel="stylesheet" type="text/css" href="/screens/styles_s3.css" />
 
 <div class="minHeight">
 <div class="fullPage">
@@ -29,12 +34,7 @@ $(document).ready(function () {
 <div class="navTop">
 <div class="navRight">
 <ul>
-<li>
-<!--{patronrecord}-->
-</li>
-<li>
-<!--{logout}-->
-</li>
+<li><a href="/patroninfo">My Library Account</a></li>
 <li><a href="http://library.semo.edu/info/library/hours.shtml">Hours</a></li>
 <li>
 <!-- Place this div in your web page where you want your chat widget to appear. -->
@@ -55,8 +55,6 @@ $(document).ready(function () {
 </div>
 <div class="topLogo">
 
-
-
 <div class="topLogoImage">
 <a href="/search" tabindex="10"><img src="/screens/kent.png" alt="Kent Library Catalog"></a>
 </div>
@@ -65,7 +63,10 @@ $(document).ready(function () {
 <a href="/" tabindex="10"><img src="/screens/semo.png" alt="Southeast Missouri State University"></a>
 </div>
 
+<div id="alertMessage"></div>
+
 </div><!--topLogo-->
+
 
 <div class="linkBanner">
 
