Hid the scope dropdown for MAC

--- a/srchhelp_X.html
+++ b/srchhelp_X.html
@@ -60,7 +60,7 @@ startTimeout(600000, "/");
 <table border="0">
 <tr>
 <td>
-<label for="searchscope">
+<label for="searchscope" id="searchscopeLabel" >
 Library
 </label>
 </td>
