Changed the title to Kent Library Catalog for SEMO

--- a/toplogo_loggedin_s3.html
+++ b/toplogo_loggedin_s3.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src='/screens/sms.js'> </script>
 <script type="text/javascript">
 $(document).ready(function () {
+	document.title = "Kent Library Catalog"
 	$("span:contains(WebPAC PRO)").hide(); //Hide the iii footer
 
 	//$('#searchtype').change(function(){
