--- a/toplogo_s3.html
+++ b/toplogo_s3.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src='/screens/sms.js'> </script>
 <script type="text/javascript">
 $(document).ready(function () {
+	document.title = "Kent Library Catalog"
 	$("span:contains(WebPAC PRO)").hide(); //Hide the iii footer
 
 	//$('#searchtype').change(function(){
@@ -95,9 +96,11 @@ if (document.body){document.body.className = "bodybg";}
 <h1 class="navHeader">Search Options</h1>
 
 <ul id="rightCol">
+<li><a href="/search/Y">Keyword</a></li>
 <li><a href="/search/X">Advanced Search</a></li>
 <li><a href="/search/a">Author</a></li>
 <li><a href="/search/t">Title</a></li>
+<li><a href="/search/q">Author and Title</a></li>
 <li><a href="/search/s">Journals, Magazines, Newspapers</a></li>
 <li><a href="#">Numbers</a>
 			<ul>
@@ -111,7 +114,7 @@ if (document.body){document.body.className = "bodybg";}
 </li>
 <li><a href="/search/d">Subject (LC)</a></li>
 <li><a href="/search/m">Children's Subject</a></li>
-<li><a href="/search/q">Author and Title</a></li>
+<li><a href="/ftlist">New Books</a></li>
 </ul>
         
 </div>
