Replaced SEMO's chat link with an Ask Us link

--- a/toplogo_s3.html
+++ b/toplogo_s3.html
@@ -37,20 +37,7 @@ if (document.body){document.body.className = "bodybg";}
 <ul>
 <li><a href="/patroninfo">My Library Account</a></li>
 <li><a href="http://library.semo.edu/info/library/hours.shtml">Hours</a></li>
-<li>
-<!-- Place this div in your web page where you want your chat widget to appear. -->
-<div class="needs-js">
- JavaScript disabled or chat unavailable.
-</div>
-<!-- Place this script as near to the end of your BODY as possible. -->
-<script type="text/javascript">
- (function() {
-   var x = document.createElement("script"); x.type = "text/javascript"; x.async = true;
-   x.src = (document.location.protocol === "https:" ? "https://" : "http://") + "libraryh3lp.com/js/libraryh3lp.js?1364"
-   var y = document.getElementsByTagName("script")[0]; y.parentNode.insertBefore(x, y);
- })();
-</script>
-</li>
+<li><a href="http://library.semo.edu/learn/askus.shtml">Ask Us</a></li>
 </ul>
 </div>
 </div>
