Added a non-cookie dependent scope to SEMO's toplogo image

--- a/toplogo_s3.html
+++ b/toplogo_s3.html
@@ -44,7 +44,7 @@ if (document.body){document.body.className = "bodybg";}
 <div class="topLogo">
 
 <div class="topLogoImage">
-<a href="/search" tabindex="10"><img src="/screens/kent.png" alt="Kent Library Catalog"></a>
+<a href="/search~S3" tabindex="10"><img src="/screens/kent.png" alt="Kent Library Catalog"></a>
 </div>
 
 <div class="clusterLogo">
