Fixed the link for TRCC's home page

--- a/toplogo_loggedin_s2.html
+++ b/toplogo_loggedin_s2.html
@@ -61,7 +61,7 @@ if (document.body){document.body.className = "bodybg";}
 <li><a href="/search/j">Course Reserves</a></li>
 <li><a href="http://searchmobius.org">MOBIUS</a></li>
 <li><a href="/search/k">Help</a></li>
-<li><a href="http://www.trcc.commnet.edu/div_it/library/library.shtml">Library Home</a></li>
+<li><a href="http://www.trcc.edu/arc/">Library Home</a></li>
 </ul>	
 
 </div>
