Changed the help link to help for all of the scopes

--- a/toplogo_loggedin_s3.html
+++ b/toplogo_loggedin_s3.html
@@ -14,7 +14,7 @@ $(document).ready(function () {
 	$("span:contains(WebPAC PRO)").hide(); //Hide the iii footer
 
 	//$('#searchtype').change(function(){
-    	//$("#exampleText").load("screens/" + this.value + ".inc");
+    	//$("#exampleText").load("/screens/" + this.value + ".inc");
 	//});
 	//Changes the search examples
 	$('#b option:not([value^="s"])').hide(); //Hides the out-of-scope locations
@@ -63,7 +63,7 @@ if (document.body){document.body.className = "bodybg";}
 <ul>
 <li><a href="http://library.semo.edu/">Library Home</a></li>
 <li><a href="/search/j">Course Reserves</a></li>
-<li><a href="/search/k">Help</a></li>
+<li><a href="/help">Help</a></li>
 <li>
 <!--{startover}-->
 </li>
