--- a/toplogo_s1.html
+++ b/toplogo_s1.html
@@ -13,7 +13,7 @@ $(document).ready(function () {
 	$("span:contains(WebPAC PRO)").hide(); //Hide the iii footer
 
 	//$('#searchtype').change(function(){
-    	//$("#exampleText").load("screens/" + this.value + ".inc");
+    	//$("#exampleText").load("/screens/" + this.value + ".inc");
 	//});
 	//Changes the search examples
 	$('#b option:not([value^="m"])').hide(); //Hides the out-of-scope locations
@@ -57,7 +57,7 @@ if (document.body){document.body.className = "bodybg";}
 <li><a href="/search/j">Course Reserves</a></li>
 <li><a href="http://searchmobius.org">MOBIUS</a></li>
 <li><a href="/ftlist">New Material</a></li>
-<li><a href="/search/k">Help</a></li>
+<li><a href="/help">Help</a></li>
 <li><a href="http://www.mineralarea.edu/library/default.aspx">Library Home</a></li>
 </ul>	
 
