--- a/toplogo.html
+++ b/toplogo.html
@@ -54,7 +54,7 @@ if (document.body){document.body.className = "bodybg";}
 <li><a href="/patroninfo">My Library Account</a></li>
 <li><a href="/search/j">Course Reserves</a></li>
 <li><a href="http://searchmobius.org">MOBIUS</a></li>
-<li><a href="/search/k">Help</a></li>
+<li><a href="/help">Help</a></li>
 </ul>	
 
 </div>
