--- a/toplogo_loggedin.html
+++ b/toplogo_loggedin.html
@@ -61,7 +61,7 @@ if (document.body){document.body.className = "bodybg";}
 </li>
 <li><a href="/search/j">Course Reserves</a></li>
 <li><a href="http://searchmobius.org">MOBIUS</a></li>
-<li><a href="/search/k">Help</a></li>
+<li><a href="/help">Help</a></li>
 </ul>	
 
 </div>
