--- a/toplogo_s2.html
+++ b/toplogo_s2.html
@@ -13,7 +13,7 @@ $(document).ready(function () {
 	$("span:contains(WebPAC PRO)").hide(); //Hide the iii footer
 
 	//$('#searchtype').change(function(){
-    	//$("#exampleText").load("screens/" + this.value + ".inc");
+    	//$("#exampleText").load("/screens/" + this.value + ".inc");
 	//});
 	//Changes the search examples
 	//$('#b option:not([value^="b"])').hide(); //Hides the out-of-scope locations
@@ -52,7 +52,7 @@ if (document.body){document.body.className = "bodybg";}
 <li><a href="/patroninfo">My Library Account</a></li>
 <li><a href="/search/j">Course Reserves</a></li>
 <li><a href="http://searchmobius.org">MOBIUS</a></li>
-<li><a href="/search/k">Help</a></li>
+<li><a href="/help">Help</a></li>
 <li><a href="http://www.trcc.edu/arc/">Library Home</a></li>
 </ul>	
 
