change wording of genre examples

--- a/srchhelp_j.html
+++ b/srchhelp_j.html
@@ -58,10 +58,10 @@ startTimeout(600000, "/");
 <div class="formRight">
 <p>Type as much of the genre as you want. For example:</p>
 <ul>
-<li>academic disserations</li>
-<li>booksellers advertisements</li>
-<li>fantasy fiction</li>
-<li>comedy films</li>
+<li>Children's Stories</li>
+<li>Detective and Mystery Stories</li>
+<li>Fantasy Fiction</li>
+<li>Comedy Films</li>
 </ul>
 </div><!--formRight -->
 
