--- a/toplogo_s3.html
+++ b/toplogo_s3.html
@@ -104,7 +104,7 @@ if (document.body){document.body.className = "bodybg";}
 </li>
 <li><a href="/search/d">Subject (LC)</a></li>
 <li><a href="/search/m">Children's Subject</a></li>
-<li><a href="/search/j">Genre</a></li>
+<li><a href="/search/v">Genre</a></li>
 <li><a href="/ftlist">New Books</a></li>
 </ul>
         
