fix genre and course reserves

--- a/toplogo_loggedin_s1.html
+++ b/toplogo_loggedin_s1.html
@@ -66,7 +66,7 @@ if (document.body){document.body.className = "bodybg";}
 <li>
 <!--{logout}-->
 </li>
-<li><a href="/search/j">Course Reserves</a></li>
+<li><a href="/search/r">Course Reserves</a></li>
 <li><a href="http://searchmobius.org">MOBIUS</a></li>
 <li><a href="/ftlist">New Material</a></li>
 <li><a href="/help">Help</a></li>
