--- a/toplogo_s3.html
+++ b/toplogo_s3.html
@@ -64,7 +64,7 @@ if (document.body){document.body.className = "bodybg";}
 <div class="navLeft">
 <ul>
 <li><a href="http://library.semo.edu/">Library Home</a></li>
-<li><a href="/search/j">Course Reserves</a></li>
+<li><a href="/search/r">Course Reserves</a></li>
 <li><a href="/help">Help</a></li>
 </ul>	
 </div>
@@ -104,7 +104,7 @@ if (document.body){document.body.className = "bodybg";}
 </li>
 <li><a href="/search/d">Subject (LC)</a></li>
 <li><a href="/search/m">Children's Subject</a></li>
-<li><a href="/search/v">Genre</a></li>
+<li><a href="/search/j">Genre</a></li>
 <li><a href="/ftlist">New Books</a></li>
 </ul>
         
