--- a/toplogo_loggedin_s2.html
+++ b/toplogo_loggedin_s2.html
@@ -62,7 +62,7 @@ if (document.body){document.body.className = "bodybg";}
 <li>
 <!--{logout}-->
 </li>
-<li><a href="/search/j">Course Reserves</a></li>
+<li><a href="/search/r">Course Reserves</a></li>
 <li><a href="http://searchmobius.org">MOBIUS</a></li>
 <li><a href="/help">Help</a></li>
 <li><a href="http://www.trcc.edu/arc/">Library Home</a></li>
