--- a/toplogo_s1.html
+++ b/toplogo_s1.html
@@ -58,7 +58,7 @@ if (document.body){document.body.className = "bodybg";}
 <div class="navRight">
 <ul>
 <li><a href="/patroninfo">My Library Account</a></li>
-<li><a href="/search/j">Course Reserves</a></li>
+<li><a href="/search/r">Course Reserves</a></li>
 <li><a href="http://searchmobius.org">MOBIUS</a></li>
 <li><a href="/ftlist">New Material</a></li>
 <li><a href="/help">Help</a></li>
