update icon for new logo

--- a/botlogo_s1.html
+++ b/botlogo_s1.html
@@ -120,5 +120,5 @@ document.documentElement.firstChild.appendChild(s);
 </script>
 <!-- end botlogo.html file -->
 
-<link rel="shortcut icon" type="ximage/icon" href="/screens/mac.ico" />
+<link rel="shortcut icon" type="ximage/icon" href="/screens/macicon.ico" />
 <!-- end botlogo.html file -->
