corrected typo, added styles for pverify text RT#73944

--- a/pverify_web_s3.html
+++ b/pverify_web_s3.html
@@ -103,7 +103,7 @@ Password:
 <!--{formend}-->
 
 </div>
-<span class="semoMessage"> Hold service is available only to Distance Ed and Online students not in Cape Grirardeau; no other hold requests can be honored.</span>
+<span class="semoMessage">Hold service is available only to Distance Ed and Online students not in Cape Girardeau; no other hold requests can be honored.</span>
 </div>
 
 <!-- pageContentInner -->
