--- a/pverify3_web_s3.html
+++ b/pverify3_web_s3.html
@@ -5,7 +5,7 @@
 <div id="accessibleForm" class="form1Part requestForm">
 <!--{patform}-->
 </div>
-<span class="semoMessage"> Hold service is available only to Distance Ed and Online students not in Cape Grirardeau; no other hold requests can be honored.</span>
+<span class="semoMessage">Hold service is available only to Distance Ed and Online students not in Cape Girardeau; no other hold requests can be honored.</span>
 </div><!-- pageContentInner -->
 
 
