AR patron account setup

--- a/patronview_web.html
+++ b/patronview_web.html
@@ -22,7 +22,12 @@
 <!--{holdsbtn}-->
 </div>
 </div>
- <!--{xif}-->
+<!--{xif}-->
+<!--{ifirnr}-->
+<div class="patActionItem" id="patButAR">
+<!--{irnrbtn}-->
+</div>
+<!--{xif}-->
 <!--{ifill}-->
 <div class="patActionItem" id="patButIll">
 <!--{illbtn}-->
