--- a/toplogo_s3.html
+++ b/toplogo_s3.html
@@ -62,8 +62,8 @@ if (document.body){document.body.className = "bodybg";}
 <div class="navRight">
 <ul>
 <li><a href="/patroninfo">My Library Account</a></li>
-<li><a href="http://library.semo.edu/info/library/hours.shtml">Hours</a></li>
-<li><a href="http://library.semo.edu/learn/askus.shtml">Ask Us</a></li>
+<li><a href="https://library.semo.edu/about-us/hours">Hours</a></li>
+<li><a href="https://library.semo.edu/research-help/ask-us">Ask Us</a></li>
 </ul>
 </div>
 </div>
